remove Autowired use